added html elements

--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+
 </head>
 <body>
-
+    <nav class="navBar"></nav>
+        <img src="" alt="adidas">
+    <section class="coming-soon"></section>
+    <section class="description">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos illo optio ipsam commodi beatae, doloribus ad ipsum libero ducimus. Incidunt sapiente, asperiores ipsam placeat culpa alias vero maxime maiores dolores?
+    </section>
+    <section class="inputs">
+    <input type="text">
+    <input type="button">
+    </section>
 </body>
 </html>
