--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 
 </head>
 <body>
-    <nav class="navBar"></nav>
-        <img src="" alt="adidas">
+    <nav class="navBar">
+        <img src="adidas-logo.png">
+    </nav>
+
     <section class="coming-soon"></section>
     <section class="description">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos illo optio ipsam commodi beatae, doloribus ad ipsum libero ducimus. Incidunt sapiente, asperiores ipsam placeat culpa alias vero maxime maiores dolores?
+
     </section>
     <section class="inputs">
     <input type="text">
