--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <img src="adidas-logo.png">
     </nav>
 
-    <section class="coming-soon"></section>
+    <section class="coming-soon">
+
+    </section>
     <section class="description">
 
     </section>
