--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
         <img src="adidas-logo.png">
     </nav>
 
-    <section class="coming-soon">
-
-    </section>
-    <section class="description">
-
-    </section>
-    <section class="inputs">
-    <input type="text">
-    <input type="button">
-    </section>
+    <div class="all-content-container">
+        <div class="text-content-container">
+            <h2 class="red">We're</h2>
+            <h2 class="grey">Coming Soon</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum libero voluptatem quos id ipsa ratione distinctio aut magni eligendi aperiam blanditiis commodi voluptates placeat quibusdam similique excepturi voluptatum, architecto suscipit!</p>
+        </div>
+    </div>
 </body>
 </html>
