revert and updated mobile version

--- a/index.html
+++ b/index.html
@@ -9,16 +9,22 @@
 
 </head>
 <body>
-    <nav class="navBar">
-        <img src="adidas-logo.png">
-    </nav>
-
-    <div class="all-content-container">
-        <div class="text-content-container">
-            <h2 class="red">We're</h2>
-            <h2 class="grey">Coming Soon</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum libero voluptatem quos id ipsa ratione distinctio aut magni eligendi aperiam blanditiis commodi voluptates placeat quibusdam similique excepturi voluptatum, architecto suscipit!</p>
+    <div class="all-container">
+        <img id="logo" src="https://assets.codepen.io/6060109/2560px-Adidas_Logo+1.png"> 
+        <div id="athlete">
+      
         </div>
-    </div>
+        <div class="all-content-container">
+          <div class="text-content-container">
+            <h2>We're</h2>
+            <h2>Coming Soon</h2>
+            <p>Hello friends! We are currently building our new sports and comfort clothing store. Add your email address below to stay up-to-date with announcements and our launch proposals.</p>
+          </div>
+          <form>
+            <input type="text" placeholder="Email Address">
+            <input type="submit" value="Go">
+          </form>
+        </div>
+      </div>
 </body>
 </html>
