--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="all-container">
         <img id="logo" src="https://assets.codepen.io/6060109/2560px-Adidas_Logo+1.png"> 
-        <div id="athlete">
+        <div id="athlete-mobile">
       
         </div>
         <div class="all-content-container">
@@ -25,6 +25,9 @@
             <input type="submit" value="Go">
           </form>
         </div>
+      </div>
+      <div class="desktop-image">
+        
       </div>
 </body>
 </html>
